[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.98"
thiserror = "^2.0.12"
reqwest = { version = "^0.12.15", features = ["json", "stream"] }
tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread", "sync"]}
tokio-util = { version = "^0.7.15", features = ["codec"] }
toml = "^0.8.22"
serde = { version = "^1.0.219", features = ["derive"] }
base64 = "^0.22.1"
url = "^2.5.4"
futures-util = { version = "^0.3.31", features = ["default"] }
bytes = "^1.10.1"
pin-project-lite = "^0.2.16"
parking_lot = "^0.12.3"
futures = "^0.3.31"
uuid = { version = "^1.17.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "^0.4.41", features = ["serde"] }
serde_json = "^1.0.140"
crossterm = "^0.29.0"
async-trait = "^0.1.88"
